--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
     <version.ejb.plugin>2.2</version.ejb.plugin>
     <version.enforcer.plugin>1.0-beta-1</version.enforcer.plugin>
     <version.exec.plugin>1.1.1</version.exec.plugin>
+    <version.failsafe.plugin>2.4.3-alpha-1</version.failsafe.plugin>
     <version.findbugs.plugin>2.3</version.findbugs.plugin>
     <version.idea.plugin>2.2</version.idea.plugin>
     <version.install.plugin>2.3</version.install.plugin>
@@ -214,6 +215,11 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
           <version>${version.exec.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>failsafe-maven-plugin</artifactId>
+          <version>${version.failsafe.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -543,6 +549,37 @@
                 <phase>initialize</phase>
                 <goals>
                   <goal>create</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!-- 
+    This profile is used to launch integration tests with the failsafe plugin
+    http://mojo.codehaus.org/failsafe-maven-plugin
+     -->
+    <profile>
+      <id>run-its</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>failsafe-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>integration-test</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>verify</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>verify</goal>
                 </goals>
               </execution>
             </executions>
