--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    Copyright (C) 2003-2010 eXo Platform SAS.
+
+    This program is free software; you can redistribute it and/or
+    modify it under the terms of the GNU Affero General Public License
+    as published by the Free Software Foundation; either version 3
+    of the License, or (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, see <http://www.gnu.org/licenses/>.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.exoplatform</groupId>
   <artifactId>exo.parent</artifactId>
+  <version>8-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo parent POM</name>
-  <version>8-SNAPSHOT</version>
   <description>Provides default project configuration for eXo projects</description>
   <url>http://www.exoplatform.com</url>
   <licenses>
@@ -29,8 +47,101 @@
   </issueManagement>
   <ciManagement>
     <system>hudson</system>
-    <url>http://builder.exoplatform.org/hudson</url>
+    <url>http://builder.exoplatform.org/hudson/job/parent-pom-trunk-ci</url>
   </ciManagement>
+  <distributionManagement>
+    <repository>
+      <id>repository.exoplatform.org</id>
+      <url>${exo.releases.repo.url}</url>
+    </repository>
+    <snapshotRepository>
+      <id>repository.exoplatform.org</id>
+      <url>${exo.snapshots.repo.url}</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <properties>
+    <exo.product.name>eXo Platform</exo.product.name>
+    <exo.product.specification>N/A</exo.product.specification>
+    <!-- **************** -->
+    <!-- Plugins versions -->
+    <!-- **************** -->
+    <version.antrun.plugin>1.3</version.antrun.plugin>
+    <version.assembly.plugin>2.2-beta-5</version.assembly.plugin>
+    <version.buildhelper.plugin>1.4</version.buildhelper.plugin>
+    <version.buildnumber.plugin>1.0-beta-4</version.buildnumber.plugin>
+    <version.clean.plugin>2.4</version.clean.plugin>
+    <version.checkstyle.plugin>2.4</version.checkstyle.plugin>
+    <version.clover2.plugin>2.6.3</version.clover2.plugin>
+    <version.cobertura.plugin>2.3</version.cobertura.plugin>
+    <version.compiler.plugin>2.1</version.compiler.plugin>
+    <version.dependency.plugin>2.1</version.dependency.plugin>
+    <version.deploy.plugin>2.5</version.deploy.plugin>
+    <version.eclipse.plugin>2.7</version.eclipse.plugin>
+    <version.ear.plugin>2.4</version.ear.plugin>
+    <version.ejb.plugin>2.2</version.ejb.plugin>
+    <version.enforcer.plugin>1.0-beta-1</version.enforcer.plugin>
+    <version.exec.plugin>1.1.1</version.exec.plugin>
+    <version.exobuild.plugin>1.2.0</version.exobuild.plugin>
+    <version.failsafe.plugin>2.4.3-alpha-1</version.failsafe.plugin>
+    <version.findbugs.plugin>2.3</version.findbugs.plugin>
+    <version.idea.plugin>2.2</version.idea.plugin>
+    <version.install.plugin>2.3</version.install.plugin>
+    <version.jar.plugin>2.3</version.jar.plugin>
+    <version.javacc.plugin>2.6</version.javacc.plugin>
+    <version.javadoc.plugin>2.6.1</version.javadoc.plugin>
+    <version.javancss.plugin>2.0</version.javancss.plugin>
+    <version.jdepend.plugin>2.0-beta-2</version.jdepend.plugin>
+    <!--  Upgrading JIBX doesn't work for JCR (at least without modifying the project)-->
+    <version.jibx.plugin>1.1.6a</version.jibx.plugin>
+    <version.jxr.plugin>2.1</version.jxr.plugin>
+    <version.pir.plugin>2.1.2</version.pir.plugin>
+    <!-- maven-project-info-reports-plugins -->
+    <version.plugin.plugin>2.5.1</version.plugin.plugin>
+    <version.pmd.plugin>2.4</version.pmd.plugin>
+    <version.rar.plugin>2.2</version.rar.plugin>
+    <version.release.plugin>2.0-beta-9</version.release.plugin>
+    <version.resources.plugin>2.4.1</version.resources.plugin>
+    <version.site.plugin>2.1</version.site.plugin>
+    <version.sonar.plugin>1.0-beta-1</version.sonar.plugin>
+    <version.source.plugin>2.1.1</version.source.plugin>
+    <version.surefire.plugin>2.5</version.surefire.plugin>
+    <version.taglist.plugin>2.4</version.taglist.plugin>
+    <version.versions.plugin>1.1</version.versions.plugin>
+    <version.war.plugin>2.1-beta-1</version.war.plugin>
+    <!-- ***************** -->
+    <!-- Repositories URLs -->
+    <!-- ***************** -->
+    <exo.releases.repo.url>http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
+    <exo.snapshots.repo.url>http://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
+    <!-- ************** -->
+    <!-- Build settings -->
+    <!-- ************** -->
+    <!-- Cross plugins settings -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- maven-clover2-plugin -->
+    <!-- where snapshots are stored to use clover optimization -->
+    <maven.clover.snapshot>${user.home}/.clover/${project.groupId}-${project.artifactId}/clover.snapshot</maven.clover.snapshot>
+    <!-- where historical data are stored -->
+    <maven.clover.historyDir>${user.home}/.clover/${project.groupId}-${project.artifactId}/clover.history</maven.clover.historyDir>
+    <!-- maven-compiler-plugin -->
+    <maven.compiler.target>1.5</maven.compiler.target>
+    <maven.compiler.source>1.5</maven.compiler.source>
+    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+    <maven.compiler.optimize>true</maven.compiler.optimize>
+    <!-- maven-enforcer-plugin -->
+    <maven.min.version>2.2.1</maven.min.version>
+    <jdk.min.version>${maven.compiler.source}</jdk.min.version>
+    <!-- maven-idea-plugin & maven-eclipse-plugin -->
+    <downloadSources>true</downloadSources>
+    <!-- maven-pmd-plugin -->
+    <targetJdk>${maven.compiler.target}</targetJdk>
+    <!-- maven-release-plugin -->
+    <preparationGoals>clean install</preparationGoals>
+    <useReleaseProfile>false</useReleaseProfile>
+    <arguments>-Prelease</arguments>
+    <autoVersionSubmodules>true</autoVersionSubmodules>
+  </properties>
   <build>
     <pluginManagement>
       <!-- All plugins ordered by shortname (antrun, assembly ...) -->
@@ -301,123 +412,6 @@
       </plugins>
     </pluginManagement>
   </build>
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${version.pir.plugin}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-        <version>${version.jxr.plugin}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>taglist-maven-plugin</artifactId>
-        <version>${version.taglist.plugin}</version>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>versions-maven-plugin</artifactId>
-        <version>${version.versions.plugin}</version>
-      </plugin>
-    </plugins>
-  </reporting>
-  <distributionManagement>
-    <repository>
-      <id>repository.exoplatform.org</id>
-      <url>${exo.releases.repo.url}</url>
-    </repository>
-    <snapshotRepository>
-      <id>repository.exoplatform.org</id>
-      <url>${exo.snapshots.repo.url}</url>
-    </snapshotRepository>
-  </distributionManagement>
-  <properties>
-    <exo.product.name>eXo Platform</exo.product.name>
-    <exo.product.specification>N/A</exo.product.specification>
-    <!-- **************** -->
-    <!-- Plugins versions -->
-    <!-- **************** -->
-    <version.antrun.plugin>1.3</version.antrun.plugin>
-    <version.assembly.plugin>2.2-beta-5</version.assembly.plugin>
-    <version.buildhelper.plugin>1.4</version.buildhelper.plugin>
-    <version.buildnumber.plugin>1.0-beta-4</version.buildnumber.plugin>
-    <version.clean.plugin>2.4</version.clean.plugin>
-    <version.checkstyle.plugin>2.4</version.checkstyle.plugin>
-    <version.clover2.plugin>2.6.3</version.clover2.plugin>
-    <version.cobertura.plugin>2.3</version.cobertura.plugin>
-    <version.compiler.plugin>2.1</version.compiler.plugin>
-    <version.dependency.plugin>2.1</version.dependency.plugin>
-    <version.deploy.plugin>2.5</version.deploy.plugin>
-    <version.eclipse.plugin>2.7</version.eclipse.plugin>
-    <version.ear.plugin>2.4</version.ear.plugin>
-    <version.ejb.plugin>2.2</version.ejb.plugin>
-    <version.enforcer.plugin>1.0-beta-1</version.enforcer.plugin>
-    <version.exec.plugin>1.1.1</version.exec.plugin>
-    <version.exobuild.plugin>1.2.0</version.exobuild.plugin>
-    <version.failsafe.plugin>2.4.3-alpha-1</version.failsafe.plugin>
-    <version.findbugs.plugin>2.3</version.findbugs.plugin>
-    <version.idea.plugin>2.2</version.idea.plugin>
-    <version.install.plugin>2.3</version.install.plugin>
-    <version.jar.plugin>2.3</version.jar.plugin>
-    <version.javacc.plugin>2.6</version.javacc.plugin>
-    <version.javadoc.plugin>2.6.1</version.javadoc.plugin>
-    <version.javancss.plugin>2.0</version.javancss.plugin>
-    <version.jdepend.plugin>2.0-beta-2</version.jdepend.plugin>
-    <!--  Upgrading JIBX doesn't work for JCR (at least without modifying the project)-->
-    <version.jibx.plugin>1.1.6a</version.jibx.plugin>
-    <version.jxr.plugin>2.1</version.jxr.plugin>
-    <version.pir.plugin>2.1.2</version.pir.plugin>
-    <!-- maven-project-info-reports-plugins -->
-    <version.plugin.plugin>2.5.1</version.plugin.plugin>
-    <version.pmd.plugin>2.4</version.pmd.plugin>
-    <version.rar.plugin>2.2</version.rar.plugin>
-    <version.release.plugin>2.0-beta-9</version.release.plugin>
-    <version.resources.plugin>2.4.1</version.resources.plugin>
-    <version.site.plugin>2.1</version.site.plugin>
-    <version.sonar.plugin>1.0-beta-1</version.sonar.plugin>
-    <version.source.plugin>2.1.1</version.source.plugin>
-    <version.surefire.plugin>2.5</version.surefire.plugin>
-    <version.taglist.plugin>2.4</version.taglist.plugin>
-    <version.versions.plugin>1.1</version.versions.plugin>
-    <version.war.plugin>2.1-beta-1</version.war.plugin>
-    <!-- ***************** -->
-    <!-- Repositories URLs -->
-    <!-- ***************** -->
-    <exo.releases.repo.url>http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
-    <exo.snapshots.repo.url>http://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
-    <!-- ************** -->
-    <!-- Build settings -->
-    <!-- ************** -->
-    <!-- Cross plugins settings -->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- maven-clover2-plugin -->
-    <!-- where snapshots are stored to use clover optimization -->
-    <maven.clover.snapshot>${user.home}/.clover/${groupId}-${artifactId}/clover.snapshot</maven.clover.snapshot>
-    <!-- where historical data are stored -->
-    <maven.clover.historyDir>${user.home}/.clover/${groupId}-${artifactId}/clover.history</maven.clover.historyDir>
-    <!-- maven-compiler-plugin -->
-    <maven.compiler.target>1.5</maven.compiler.target>
-    <maven.compiler.source>1.5</maven.compiler.source>
-    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
-    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
-    <maven.compiler.optimize>true</maven.compiler.optimize>
-    <!-- maven-enforcer-plugin -->
-    <maven.min.version>2.2.1</maven.min.version>
-    <jdk.min.version>${maven.compiler.source}</jdk.min.version>
-    <!-- maven-idea-plugin & maven-eclipse-plugin -->
-    <downloadSources>true</downloadSources>
-    <!-- maven-pmd-plugin -->
-    <targetJdk>${maven.compiler.target}</targetJdk>
-    <!-- maven-release-plugin -->
-    <preparationGoals>clean install</preparationGoals>
-    <useReleaseProfile>false</useReleaseProfile>
-    <arguments>-Prelease</arguments>
-    <autoVersionSubmodules>true</autoVersionSubmodules>
-  </properties>
   <profiles>
     <profile>
       <id>enforce</id>
@@ -606,4 +600,28 @@
       </build>
     </profile>
   </profiles>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>${version.pir.plugin}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <version>${version.jxr.plugin}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>taglist-maven-plugin</artifactId>
+        <version>${version.taglist.plugin}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>${version.versions.plugin}</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
