--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     <version.buildnumber.plugin>1.0-beta-4</version.buildnumber.plugin>
     <version.clean.plugin>2.4</version.clean.plugin>
     <version.checkstyle.plugin>2.4</version.checkstyle.plugin>
+    <version.clirr.plugin>2.2.2</version.clirr.plugin>
     <version.clover2.plugin>2.6.3</version.clover2.plugin>
     <version.cobertura.plugin>2.3</version.cobertura.plugin>
     <version.compiler.plugin>2.1</version.compiler.plugin>
@@ -124,6 +125,8 @@
     <maven.clover.snapshot>${user.home}/.clover/${project.groupId}-${project.artifactId}/clover.snapshot</maven.clover.snapshot>
     <!-- where historical data are stored -->
     <maven.clover.historyDir>${user.home}/.clover/${project.groupId}-${project.artifactId}/clover.history</maven.clover.historyDir>
+    <!-- maven-clirr-plugin -->
+    <textOutputFile>${project.build.directory}/clirr-report.txt</textOutputFile>
     <!-- maven-compiler-plugin -->
     <maven.compiler.target>1.5</maven.compiler.target>
     <maven.compiler.source>1.5</maven.compiler.source>
@@ -176,6 +179,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>${version.clean.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>clirr-maven-plugin</artifactId>
+          <version>${version.clirr.plugin}</version>
         </plugin>
         <plugin>
           <groupId>com.atlassian.maven.plugins</groupId>
@@ -571,6 +579,13 @@
               </execution>
             </executions>
           </plugin>
+          <!--
+            Checks backward compatibility is maintained
+          -->
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>clirr-maven-plugin</artifactId>
+          </plugin>
         </plugins>
       </build>
     </profile>
@@ -605,6 +620,24 @@
         </plugins>
       </build>
     </profile>
+    <!--
+     Checks backward compatibility is maintained
+     -->
+    <profile>
+      <id>chk-backward-comp</id>
+      <build>
+        <defaultGoal>clirr:check</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>clirr-maven-plugin</artifactId>
+            <configuration>
+              <failOnError>false</failOnError>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
   <reporting>
     <plugins>
@@ -627,6 +660,17 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
         <version>${version.versions.plugin}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+        <version>${version.clirr.plugin}</version>
+        <configuration>
+          <!-- There is a know incompatibility between clirr and jibx -->
+          <excludes>
+            <exclude>**/JiBX_*</exclude>
+          </excludes>
+        </configuration>
       </plugin>
     </plugins>
   </reporting>
