--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,7 @@
                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
               </manifest>
               <manifestEntries>
+                <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
                 <Specification-Title>${exo.product.name}</Specification-Title>
@@ -308,6 +309,7 @@
                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
               </manifest>
               <manifestEntries>
+                <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
                 <Specification-Title>${exo.product.name}</Specification-Title>
@@ -425,6 +427,7 @@
                 <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
               </manifest>
               <manifestEntries>
+                <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
                 <Specification-Title>${exo.product.name}</Specification-Title>
