--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
     <version.exec.plugin>1.1.1</version.exec.plugin>
     <version.exobuild.plugin>1.2.1</version.exobuild.plugin>
     <version.exopc.plugin>1.0.5</version.exopc.plugin>
-    <version.failsafe.plugin>2.4.3-alpha-1</version.failsafe.plugin>
+    <version.failsafe.plugin>2.5</version.failsafe.plugin>
     <version.findbugs.plugin>2.3.1</version.findbugs.plugin>
     <version.idea.plugin>2.2</version.idea.plugin>
     <version.install.plugin>2.3</version.install.plugin>
@@ -279,8 +279,8 @@
           <version>${version.exopc.plugin}</version>
         </plugin>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>failsafe-maven-plugin</artifactId>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
           <version>${version.failsafe.plugin}</version>
         </plugin>
         <plugin>
@@ -695,15 +695,15 @@
     </profile>
     <!-- 
     This profile is used to launch integration tests with the failsafe plugin
-    http://mojo.codehaus.org/failsafe-maven-plugin
+    http://maven.apache.org/plugins/maven-failsafe-plugin/
      -->
     <profile>
       <id>run-its</id>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>failsafe-maven-plugin</artifactId>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
             <executions>
               <execution>
                 <id>integration-test</id>
