--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     <version.jxr.plugin>2.1</version.jxr.plugin>
     <!-- maven-project-info-reports-plugin -->
     <version.pir.plugin>2.1.2</version.pir.plugin>
+    <version.plexus.plugin>1.3.8</version.plexus.plugin>
     <version.plugin.plugin>2.5.1</version.plugin.plugin>
     <version.pmd.plugin>2.4</version.pmd.plugin>
     <version.rar.plugin>2.2</version.rar.plugin>
@@ -376,6 +377,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jxr-plugin</artifactId>
           <version>${version.jxr.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>plexus-maven-plugin</artifactId>
+          <version>${version.plexus.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
