--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <version.findbugs.plugin>2.3.1</version.findbugs.plugin>
     <version.idea.plugin>2.2</version.idea.plugin>
     <version.install.plugin>2.3</version.install.plugin>
+    <version.invoker.plugin>1.5</version.invoker.plugin>
     <version.jar.plugin>2.3</version.jar.plugin>
     <version.javacc.plugin>2.6</version.javacc.plugin>
     <version.javadoc.plugin>2.5</version.javadoc.plugin>
@@ -304,6 +305,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
           <version>${version.install.plugin}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-invoker-plugin</artifactId>
+          <version>${version.invoker.plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
